# kalshi-rs

./: .env.test.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: pre-commit
.claude/skills/kalshi-api-docs/: GOTCHAS.md  REST.md  SKILL.md  WEBSOCKET.md
docs/: README.md
examples/: historical_events_pager.rs  list_open_markets.rs  lob_delta.rs  orderbook_stream.rs  paginate_fills.rs  parallel_event_markets.rs  place_order.rs  public_ticker_stream.rs  raw_borrowed_stream.rs  resumable_market_scan.rs  stream_recent_trades.rs
src/: auth.rs  env.rs  error.rs  lib.rs  rest.rs  types.rs  ws.rs  ws_manager.rs
src/rest/: client.rs  mod.rs  types.rs
src/types/: account.rs  common.rs  errors.rs  events.rs  exchange.rs  markets.rs  orderbook.rs  portfolio.rs  series.rs  subaccounts.rs  trades.rs
src/ws/: client.rs  mod.rs  types.rs
tests/: parsing.rs  rest_auth.rs  rest_public.rs  ws_auth.rs  ws_parsing.rs  ws_public.rs
tests/common/: mod.rs
